infrastructure/applications/atomsized.com/markdown-editor/main-app/src/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markdown-editor
  labels:
    app: markdown-editor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markdown-editor
  template:
    metadata:
      labels:
        app: markdown-editor
    spec:
      containers:
        - name: markdown-editor
          image: registry.digitalocean.com/kubeden/markdown-editor:20308c2f97bd411ed4256930e9f96edeeab7cd1b
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: kubeden
